--- a/action.yml
+++ b/action.yml
@@ -3,11 +3,88 @@ description: >
   Fast and flexible action to cherry-pick commits from labeled pull requests
 author: korthout
 inputs:
+  add_author_as_assignee:
+    description: >
+      Controls whether to set the author of the original pull request as an assignee on the backport pull request.
+      By default, the original author is not made an assignee.
+  add_labels:
+    description: >
+      The action will add these labels (comma-delimited) to the backport pull request.
+      By default, no labels are added.
+  branch_name:
+    description: >
+      Template used as the name for branches created by this action.
+      Placeholders can be used to define variable values.
+      These are indicated by a dollar sign and curly braces (`${placeholder}`).
+      Please refer to this action's README for all available placeholders.
+    default: backport-${pull_number}-to-${target_branch}
+  cherry_picking:
+    description:
+      Determines which commits are cherry-picked.
+
+      When set to `auto`, the action cherry-picks the commits based on the method used to merge the pull request.
+      - For "Squash and merge", the action cherry-picks the squashed commit.
+      - For "Rebase and merge", the action cherry-picks the rebased commits.
+      - For "Merged as a merge commit", the action cherry-picks the commits from the pull request.
+
+      When set to `pull_request_head`, the action cherry-picks the commits from the pull request.
+      Specifically, those reachable from the pull request's head and not reachable from the pull request's base.
+
+      By default, the action cherry-picks the commits based on the method used to merge the pull request.
+    default: auto
+  copy_assignees:
+    description: >
+      Controls whether to copy the assignees from the original pull request to the backport pull request.
+      By default, the assignees are not copied.
+    default: false
   copy_labels_pattern:
     description: >
       Regex pattern to match github labels which will be copied from the original pull request to the backport pull request.
       Note that labels matching `label_pattern` are excluded.
       By default, no labels are copied.
+  copy_milestone:
+    description: >
+      Controls whether to copy the milestone from the original pull request to the backport pull request.
+      By default, the milestone is not copied.
+    default: false
+  copy_requested_reviewers:
+    description: >
+      Controls whether to copy the requested reviewers from the original pull request to the backport pull request.
+      Note that this does not request reviews from those users who already reviewed the original pull request.
+      By default, the requested reviewers are not copied.
+    default: false
+  experimental:
+    description: >
+      Configure experimental features by passing a JSON object.
+      The following properties can be specified:
+
+      #### `conflict_resolution`
+
+      Specifies how the action will handle a conflict occuring during the cherry-pick.
+      In all cases, the action will stop the cherry-pick at the first conflict encountered.
+
+      Behavior is defined by the option selected.
+      - When set to `fail` the backport fails when the cherry-pick encounters a conflict.
+      - When set to `draft_commit_conflicts` the backport will always create a draft pull request with the first conflict encountered committed.
+
+      Instructions are provided on the original pull request on how to resolve the conflict and continue the cherry-pick.
+
+      #### `downstream_repo`
+
+      Define if you want to backport to a repository other than where the workflow runs.
+
+      By default, the action always backports to the repository in which the workflow runs.
+
+      #### `downstream_owner`
+
+      Define if you want to backport to another owner than the owner of the repository the workflow runs on.
+      Only takes effect if the `downstream_repo` property is also defined.
+
+      By default, uses the owner of the repository in which the workflow runs.
+    default: >
+      {
+        "conflict_resolution": "fail"
+      }
   github_token:
     description: >
       Token to authenticate requests to GitHub.
@@ -24,6 +101,12 @@ inputs:
       The action will backport the pull request to each matched target branch.
       Note that the pull request's headref is excluded automatically.
     default: ^backport ([^ ]+)$
+  merge_commits:
+    description: >
+      Specifies how the action should deal with merge commits on the merged pull request.
+      When set to `fail` the backport fails when the action detects one or more merge commits.
+      When set to `skip` the action only cherry-picks non-merge commits, i.e. it ignores merge commits.
+    default: fail
   pull_description:
     description: >
       Template used as description (i.e. body) in the pull requests created by this action.
@@ -41,13 +124,24 @@ inputs:
       Please refer to this action's README for all available placeholders.
     default: >-
       [Backport ${target_branch}] ${pull_title}
+  source_pr_number:
+    description: >
+      Specifies the pull request (by its number) to backport, i.e. the source pull request.
+      When set, the action will backport the specified pull request to each target branch.
+      When not set, the action determines the source pull request from the event payload.
   target_branches:
     description: >
       The action will backport the pull request to each specified target branch (space-delimited).
       Note that the pull request's headref is excluded automatically.
       Can be used in addition to backport labels.
       By default, only backport labels are used to specify the target branches.
+
 outputs:
+  created_pull_numbers:
+    description: >
+      Space-separated list containing the identifying number of each created pull request.
+      Or empty when the action created no pull requests.
+      For example, '123' or '123 124 125'.
   was_successful:
     description: >
       Whether or not the changes could be backported successfully to all targets.
@@ -57,8 +151,8 @@ outputs:
       Whether or not the changes could be backported successfully to all targets - broken down by target.
       Follows the pattern '{{label}}=true|false'.
 runs:
-  using: "node16"
+  using: "node20"
   main: "dist/index.js"
 branding:
-  icon: 'copy'
-  color: 'yellow'
+  icon: "copy"
+  color: "yellow"
