--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backport-action",
-  "version": "1.4.0-SNAPSHOT",
+  "version": "3.3.0-SNAPSHOT",
   "private": false,
   "description": "GitHub action to automatically backport pull requests",
   "main": "lib/main.js",
@@ -24,18 +24,18 @@
   "author": "korthout",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1",
-    "@types/dedent": "^0.7.0",
-    "dedent": "^0.7.0",
-    "execa": "^7.1.1"
+    "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.0",
+    "@types/dedent": "^0.7.2",
+    "dedent": "^1.5.3",
+    "execa": "^7.2.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.0",
-    "@vercel/ncc": "^0.36.1",
-    "jest": "^27.5.1",
-    "prettier": "2.8.8",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.9.5"
+    "@types/jest": "^29.5.14",
+    "@vercel/ncc": "^0.38.3",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.3",
+    "ts-jest": "^29.2.6",
+    "typescript": "^5.8.2"
   }
 }
